--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p >Hola mundo...</p>
-    <p>Segundo saludo...</p>
+    <p>Segundo saludo....</p>
 </body>
+<script src="script.js"></script>
 </html>
