--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p >Hola mundo...</p>
     <p>Segundo saludo....</p>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
