--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p >Hola mundo...</p>
-    <p>Segundo saludo....</p>
+    <p >Hig text...</p>
+    <p>Yes my friend....</p>
     <script src="script.js"></script>
 </body>
 </html>
