--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>Hig text...</p>
     <p>Yes my friend....</p>
+    <p>Another line</p>
     <script src="script.js"></script>
 </body>
 </html>
